# snmpfwd

./: .gitignore  CHANGES.txt  LICENSE.txt  Pipfile  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
conf/command-forwarding-snmp-ipv4-to-ipv6/: client.conf
docs/source/: conf.py  index.rst
docs/source/.templates/: layout.html
docs/source/configuration/examples/: command-forwarding-logging.rst  command-forwarding-oid-filtering.rst  command-forwarding-rewriting-response.rst  command-forwarding-server-classification.rst  command-forwarding-snmp-ipv4-to-ipv6.rst  command-forwarding-snmp-ipv6-to-ipv4.rst  command-forwarding-snmpv2c-to-snmpv3.rst  command-forwarding-snmpv3-to-snmpv1.rst  command-forwarding-trunk-ipv6.rst  command-forwarding-virtual-interfaces.rst  trap-forwarding-snmpv2-to-snmpv3.rst  trap-forwarding-snmpv3-to-snmpv1.rst
plugins/: logger.py  oidfilter.py  rewrite.py
snmpfwd/: __init__.py  cparser.py  daemon.py  endpoint.py  error.py  log.py  macro.py  next.py
snmpfwd/plugins/: manager.py  status.py
snmpfwd/scripts/: snmpfwdclient.py  snmpfwdserver.py
snmpfwd/trunking/: __init__.py  client.py  crypto.py  endpoint.py  manager.py  protocol.py  server.py
